--- a/styles.css
+++ b/styles.css
@@ -50,8 +50,18 @@ main .main-section-2-infotriangulo{
     padding: 5px 15px 5px 15px;
     border-bottom: 1px solid var(--light-palet-color);
 }
-main .main-section-2-infotriangulo p{
+main .main-section-2-infotriangulo p:nth-child(1){
     color: var(--light-palet-color);
+    font-weight: 600;
+    text-align: center;
+}
+main .main-section-2-infotriangulo p:nth-child(2){
+    color: var(--light-palet-color);
+    font-size: small;
+}
+main .main-section-2-infotriangulo p img{
+    width: 90vw;
+    margin: 0 auto;
 }
 main .main-section-2-infotriangulo div{
     display: flex;
@@ -65,6 +75,12 @@ main .main-section-2-infotriangulo div label{
     padding: 5px;
     border: 1px solid var(--white);
     color: var(--light1-palet-color);
+}
+main .main-section-2-infotriangulo .trianguloResultadosContainer h2 {
+    color: var(--light-palet-color);
+}
+main .main-section-2-infotriangulo .trianguloResultadosContainer p {
+    color: var(--light-palet-color);
 }
 main .main-section-3-infoCirculo{
     padding: 5px 15px 5px 15px;
