Se agrega la sección de descuentos con cupón y se crea la lógica respectiva para que funcione correctamente

--- a/styles.css
+++ b/styles.css
@@ -114,3 +114,19 @@ main .main-section-4-DiscountPrice label{
     border: 1px solid var(--white);
     color: var(--light1-palet-color);
 }
+main .main-section-4-DiscountPriceCoupon{
+    padding: 5px 15px 5px 15px;
+    border-bottom: 1px solid var(--light-palet-color);  
+}
+main .main-section-4-DiscountPriceCoupon p{
+    color: var(--light-palet-color);
+    margin-bottom: 5px;
+}
+main .main-section-4-DiscountPriceCoupon label {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+    padding: 5px;
+    border: 1px solid var(--white);
+    color: var(--light1-palet-color);
+}
